*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5219 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,14 @@
+# these are the properties required by the j2ee build script, but not the project build script
+project.cvs.root=:pserver:anonymous@wsa123.uits.indiana.edu:2401/opt/cvs
+project.cvs.anonpassword=nobody
+project.home=${project.cvs.package}
+# these are properties required by the project build script or both
+appserver.home=/usr/local/tomcat/${project.server}
+appserver.lib.dir=/usr/local/tomcat/default/common/lib
+appserver.deploy.dir=${appserver.home}/webapps
+appserver.config.dir=${appserver.home}/conf/Catalina/localhost
+appserver.url=https://test.kuali.org/
+# these are the properties required by the kul-cfg-envs build script
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
