*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5220 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -16,8 +16,8 @@ export.torque.database.user=${datasource.username}
 export.torque.database.password=${datasource.password}
 
 import.torque.database=${import.torque.database}
-import.torque.database.driver=${import.torque.database.driver}
-import.torque.database.url=${import.torque.database.url}
+import.torque.database.driver=${driver.class}
+import.torque.database.url=${datasource.url}
 import.torque.database.schema=${schema}
 import.torque.database.user=${datasource.username}
 import.torque.database.password=${datasource.password}
