--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,10 @@
 	</target>
 	
 	<target name="dist-external" depends="init-database-properties">
+		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
+		<cvs command="checkout -q" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}"/>
 		<ant antfile="${deployment.directory}/${project.cvs.package}/build.xml" target="dist-external" />
+		<delete dir="${project.cvs.package}" />
 	</target>
 		
 	<target name="export" depends="init-database-properties">
