--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
 	
 	<target name="dist-external" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout -q" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}"/>
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}"/>
 		<ant antfile="${deployment.directory}/${project.cvs.package}/build.xml" target="dist-external" />
 		<delete dir="${project.cvs.package}" />
 	</target>
