--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
 	
 	<target name="dist-external" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}"/>
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}" quiet="true" />
 		<ant antfile="${project.cvs.package}/build.xml" target="dist-external" />
 		<delete dir="${project.cvs.package}" />
 	</target>
@@ -40,7 +40,7 @@
 	
 	<target name="update-database" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}"/>
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}" quiet="true" />
 		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
 		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
 	</target>
