Fixed data export location.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kfs-release-2-br@7056 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -309,7 +309,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		                  databaseUser="${export.torque.database.user}"
 		                  databaseSchema="${export.torque.database.schema}"
 		                  databasePassword="${export.torque.database.password}"
-		                  outputDirectory="${torque.output.absolute.dir}"
+		                  outputDirectory="${torque.schema.dir}"
 		/>
 
 		<!-- remove files for empty tables -->
