Fixed doc export location.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kfs-release-2-br@7057 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -200,7 +200,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 
 		<torque-doc contextProperties="${torque.contextProperties}"
 		            controlTemplate="${torque.template.doc}"
-		            outputDirectory="${torque.doc.dir}"
+		            outputDirectory="${torque.schema.dir}/doc"
 		            outputFile="report.doc.generation"
 		            outputFormat="${torque.doc.format}"
 		            sqldbmap="${torque.sql.dir}/sqldb.map"
