--- a/impex/build.xml
+++ b/impex/build.xml
@@ -301,15 +301,21 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="|                                               |" />
 		<echo message="+-----------------------------------------------+" />
 
-		<property name="torque.output.absolute.dir" location="${torque.output.dir}" />
+		<property name="torque.output.absolute.dir" location="${torque.schema.dir}" />
 		<!-- above works around a problem with torque-data-dump getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
+		<delete>
+			<fileset dir="${torque.schema.dir}">
+				<include name="*.xml" />
+				<exclude name="schema.xml" />
+			</fileset>
+		</delete>
 
 		<torque-data-dump databaseDriver="${export.torque.database.driver}"
 		                  databaseUrl="${export.torque.database.url}"
 		                  databaseUser="${export.torque.database.user}"
 		                  databaseSchema="${export.torque.database.schema}"
 		                  databasePassword="${export.torque.database.password}"
-		                  outputDirectory="${torque.schema.dir}"
+		                  outputDirectory="${torque.output.absolute.dir}"
 		/>
 
 		<!-- remove files for empty tables -->
