--- a/impex-build.properties
+++ b/impex-build.properties
@@ -1,4 +1,5 @@
 torque.project=${basedir}/${application.database.cvs.module}
+torque.sql.dir = ${torque.output.dir}/datasql
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 target.zip=/tmp/kuldemo.zip
