--- a/impex-build.properties
+++ b/impex-build.properties
@@ -1,9 +1,6 @@
-torque.project=${basedir}/${application.database.cvs.module}
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
-target.zip=/tmp/kuldemo.zip
-source.zip=/tmp/kuldemo.zip
-output.dir=${torque.project}
+output.dir=${basedir}/${application.database.cvs.module}
 
 # uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
