KULRNE-6186 : updated default Oracle JDBC URL
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kfs-release-2-br@7062 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -46,7 +46,7 @@ export.torque.database.password=kuldba
 
 import.torque.database = oracle
 import.torque.database.driver = oracle.jdbc.OracleDriver
-import.torque.database.url = jdbc:oracle:thin:@localhost:1521:KUALI
+import.torque.database.url = jdbc:oracle:thin:@localhost:1521:XE
 import.torque.database.user=kuldemo
 import.torque.database.schema=KULDEMO
 import.torque.database.password=kuldemo
