*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5264 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -28,5 +28,5 @@ oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.
 oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${datasource.username}', '${datasource.password}' ); END;
 oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${datasource.username}' ); END;
 mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${schema}
-mysql.create.user.commands=CREATE USER '${datasource.username}'@'localhost' IDENTIFIED BY PASSWORD '${datasource.password}'\n/\nGRANT ALL ON ${schema}.* TO '${datasource.username}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.user.commands=CREATE USER '${datasource.username}'@'localhost' IDENTIFIED BY PASSWORD '${datasource.password}'\n/\nGRANT ALL ON ${schema}.* TO '${datasource.username}'@'%' WITH GRANT OPTION\n/
 mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
