--- a/build.xml
+++ b/build.xml
@@ -41,8 +41,7 @@
 	<target name="update-database" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${application.database.cvs.module}" tag="${project.cvs.tag}" reallyquiet="true" />
-		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
-		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
+		<ant antfile="${impex.build.file}" target="create-schema" inheritall="false" />
 	</target>
 
 	<target name="import" depends="update-database">
