*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7065 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -629,6 +629,12 @@ Please place the jar file for this class in the lib directory and try again.
 		</sequential>
 	</macrodef>
 
+	<target name="create-user" depends="inittasks">
+		<antcall>
+			<target name="${import.torque.database}-create-user" />
+		</antcall>
+	</target>
+
 	<target name="create-schema" depends="inittasks">
 		<antcall>
 			<target name="${import.torque.database}-create-user" />
