--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,13 @@
 		<ant dir="${project.cvs.package}" target="dist-external" />
 		<delete dir="${project.cvs.package}" />
 	</target>
+	
+	<target name="check-modularization" depends="init-database-properties">
+		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}" reallyquiet="true" />
+		<ant dir="${project.cvs.package}" target="check-modularization" />
+		<delete dir="${project.cvs.package}" />
+	</target>
 		
 	<target name="export" depends="init-database-properties">
 		<delete>
