--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 		<delete dir="${project.cvs.package}" />
 	</target>
 	
-	<target name="check-modularization">
+	<target name="check-modularization" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" reallyquiet="true" />
 		<ant dir="${project.cvs.package}" target="check-modularization" />
