--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
 	</target>
 	
 	<target name="check-modularization" depends="init-database-properties">
+		<delete dir="${project.cvs.package}" failonerror="false" />
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" reallyquiet="true" />
 		<ant dir="${project.cvs.package}" target="check-modularization" />
