--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,13 @@
 		<delete dir="${project.cvs.package}" failonerror="false" />
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}" reallyquiet="true" />
-		<ant dir="${project.cvs.package}" target="check-modularization" />
+		<trycatch property="has.error">
+			<try><ant dir="${project.cvs.package}" target="check-modularization" /></try>
+			<finally>
+				<delete dir="${project.cvs.package}" />
+				<fail if="has.error" />
+			</finally>
+		</trycatch>
 		<delete dir="${project.cvs.package}" />
 	</target>
 		
