Separating build from application runtime. This way the impex doesn't depend on its own source directories to run.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kul-handle_dollar_signs_in_tables-br@7081 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -19,7 +19,7 @@
 #
 # T O R Q U E  C O N F I G U R A T I O N  F I L E
 #
-# $Id: build.properties,v 1.1 2007-10-21 07:57:26 abyrne Exp $
+# $Id: build.properties,v 1.1.2.1 2008-03-11 22:51:57 lprzybyl Exp $
 #
 # -------------------------------------------------------------------
 # This file contains the most commonly used properties. For a
@@ -43,7 +43,8 @@
 # for a few targets such as datasql, datadump, and datadtd.
 # -------------------------------------------------------------------
 
-torque.project = kfs
+torque.project = kra_project
+torque.database = oracle
 
 # -------------------------------------------------------------------
 #
@@ -60,29 +61,10 @@ torque.project = kfs
 #   and columns to be the same as SQL name.
 # -------------------------------------------------------------------
 
-#export.torque.database = oracle
-#export.torque.database.driver = oracle.jdbc.OracleDriver
-#export.torque.database.url = jdbc:oracle:oci:@
-#export.torque.database.user=kuldba
-#export.torque.database.schema=KULDBA
-#export.torque.database.password=kuldba
-
-
-#import.torque.database = mysql
-#import.torque.database.driver = com.mysql.jdbc.Driver
-#import.torque.database.url = jdbc:mysql://localhost:3306/kuldba
-#import.torque.database.user=kuldba
-#import.torque.database.schema=KULDBA
-#import.torque.database.password=kuldba
-
-#import.admin.user=
-#import.admin.password=
-import.admin.url = jdbc:mysql://localhost:3306/
-
 torque.sameJavaName = false
 torque.useClasspath=true
 
-output.dir=../${torque.project}/${export.torque.database.user}
+output.dir=${user.home}/${torque.project}/${export.torque.database.user}
 
 torque.output.dir=${output.dir}
 torque.schema.dir=${output.dir}
@@ -91,3 +73,8 @@ drivers.directory = lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 
 torque.schema.doc.includes=schema.xml
+
+impex.collection.package=org.kuali.core.db.torque.
+impex.collection.default=DefaultJdbcCollectionService
+impex.generator.package=org.kuali.core.db.torque.
+impex.generator.default=DefaultJdbcToXmlGenerator
