Readding previously removed apache source.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kul-handle_dollar_signs_in_tables-br@7082 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -20,7 +20,7 @@
 <project name="kuali_db_impex" default="build" basedir=".">
 	
     <property name="src.dir" value="src/" />
-    <property name="build.dir" value="target/classes" />
+    <property name="build.dir" value="build" />
 	<property name="lib.dir" value="lib" />
 	<!--
     <property name="torque.output.dir" value="${build.dir}" />
