--- a/impex/src/log4j.properties
+++ b/impex/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, StdOut
+log4j.rootLogger=INFO, StdOut
 
 log4j.appender.StdOut=org.apache.log4j.ConsoleAppender
 log4j.appender.StdOut.layout=org.apache.log4j.PatternLayout
