--- a/impex/build.xml
+++ b/impex/build.xml
@@ -315,6 +315,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		                  databaseUser="${export.torque.database.user}"
 		                  databaseSchema="${export.torque.database.schema}"
 		                  databasePassword="${export.torque.database.password}"
+						  databaseType="${export.torque.database}"
 		                  outputDirectory="${torque.output.absolute.dir}"
 		/>
 
