Updated SQL generation to only regenerate from XML files which are newer than the SQL files.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/jkeller-sort-rows-br@7087 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -421,6 +421,9 @@ Note: Due to java native library classloader issues, the export routine (and pos
 				<fileset dir="${torque.schema.dir}" excludes="${import.exclude.data.pattern}">
 					<include name="*.xml" />
 					<exclude name="schema.xml" />
+					<depend targetdir="${torque.schema.dir}/datasql">
+						<mapper type="glob" from="*.xml" to="*.sql" />
+					</depend>
 				</fileset>
 			</path>
 		</foreach>
