--- a/impex/build.xml
+++ b/impex/build.xml
@@ -281,10 +281,10 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<torque-jdbc-transform dbDriver="${export.torque.database.driver}"
 		                       dbPassword="${export.torque.database.password}"
 		                       dbSchema="${export.torque.database.schema}"
+							   dbType="${export.torque.database}"
 		                       dbUrl="${export.torque.database.url}"
 		                       dbUser="${export.torque.database.user}"
 		                       outputFile="${torque.schema.absolute.dir}/schema.xml"
-		                       sameJavaName="${torque.sameJavaName}"
 		/>
 		<copy file="database.dtd" todir="${torque.schema.dir}" />
 	</target>
@@ -315,6 +315,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		                  databaseUser="${export.torque.database.user}"
 		                  databaseSchema="${export.torque.database.schema}"
 		                  databasePassword="${export.torque.database.password}"
+						  databaseType="${export.torque.database}"
 		                  outputDirectory="${torque.output.absolute.dir}"
 		/>
 
