--- a/build.xml
+++ b/build.xml
@@ -29,9 +29,15 @@
 	
 	<target name="dist-external" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" dest="${project.cvs.destination}" tag="${project.cvs.tag}" reallyquiet="true" />
+		<ant dir="${project.cvs.destination}/${project.cvs.package}" target="dist-external" />
+		<delete dir="${project.cvs.destination}/${project.cvs.package}" />
+		<!--
+		old version pre- package refactoring
 		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}" reallyquiet="true" />
 		<ant dir="${project.cvs.package}" target="dist-external" />
 		<delete dir="${project.cvs.package}" />
+		-->
 	</target>
 	
 	<target name="check-modularization" depends="init-database-properties">
