--- a/build.xml
+++ b/build.xml
@@ -35,17 +35,17 @@
 	</target>
 	
 	<target name="check-modularization" depends="init-database-properties">
-		<delete dir="${project.cvs.package}" failonerror="false" />
+		<delete dir="${project.cvs.destination}/${project.cvs.package}" failonerror="false" />
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" tag="${project.cvs.tag}" reallyquiet="true" />
+		<cvs command="checkout" cvsroot="${project.cvs.root}" package="${project.cvs.package}" dest="${project.cvs.destination}" tag="${project.cvs.tag}" reallyquiet="true" />
 		<trycatch property="has.error">
-			<try><ant dir="${project.cvs.package}" target="check-modularization" /></try>
+			<try><ant dir="${project.cvs.destination}/${project.cvs.package}" target="check-modularization" /></try>
 			<finally>
-				<delete dir="${project.cvs.package}" />
+				<delete dir="${project.cvs.destination}/${project.cvs.package}" />
 				<fail if="has.error" />
 			</finally>
 		</trycatch>
-		<delete dir="${project.cvs.package}" />
+		<delete dir="${project.cvs.destination}/${project.cvs.package}" />
 	</target>
 		
 	<target name="export" depends="init-database-properties">
