adding incident report mailing list
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5323 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build-mysql.properties
+++ b/kfs/build-mysql.properties
@@ -9,3 +9,6 @@ datasource.ojb.platform=MySQL
 mail.relay.server=mail-relay.iu.edu
 # from email adress for mail sent by the batch framework (JobListener and other) and to email address for job failure messages
 batch.mailing.list=kbatch-l@indiana.edu
+# to/from email address for mail sent by the incident reporting framework (KualiExceptionIncident, etc.)
+incident.mailing.list=kincident-l@indiana.edu
+
