--- a/kfs/build-oracle.properties
+++ b/kfs/build-oracle.properties
@@ -8,3 +8,5 @@ batch.schedule.cron.expression=00 00 23 ? * *
 mail.relay.server=mail-relay.iu.edu
 # from email adress for mail sent by the batch framework (JobListener and other) and to email address for job failure messages
 batch.mailing.list=kbatch-l@indiana.edu
+# to/from email address for mail sent by the incident reporting framework (KualiExceptionIncident, etc.)
+incident.mailing.list=kincident-l@indiana.edu
