KULRICE-2104 KFSMI-1036 made changes to API of XAPool as well as modified build process
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/modified/xapool-1.5.0/trunk@7014 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -255,12 +255,7 @@
       	<exclude name="eclipse-bin/**" />
       </fileset>
     </copy>
-    <tar tarfile="${tmp}/xapool-${version}-src.tar"
-      longfile="gnu"
-      basedir="${tmp}/"
-      includes="xapool-${version}/**" />
-    <gzip zipfile="${output}/xapool-${version}-src.tgz" src="${tmp}/xapool-${version}-src.tar" />
-    <delete file="${tmp}/xapool-${version}-src.tar" />
+  	<zip zipfile="${output}/xapool-${version}-src.zip" basedir="${tmp}/" includes="xapool-${version}/**" />
     <delete dir="${tmp.dir}" />
   </target>
  </project>
