--- a/impex/build.xml
+++ b/impex/build.xml
@@ -330,6 +330,27 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		</delete>
 	</target>
 
+	<target name="export-table-data" depends="inittasks,create-data-dtd"
+		>
+		<echo message="+-----------------------------------------------+" />
+		<echo message="|                                               |" />
+		<echo message="| Dumping the data from database into XML       |" />
+		<echo message="|                                               |" />
+		<echo message="+-----------------------------------------------+" />
+
+		<property name="torque.output.absolute.dir" location="${torque.schema.dir}" />
+		<!-- above works around a problem with torque-data-dump getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
+
+		<torque-data-dump databaseDriver="${export.torque.database.driver}"
+		                  databaseUrl="${export.torque.database.url}"
+		                  databaseUser="${export.torque.database.user}"
+		                  databaseSchema="${export.torque.database.schema}"
+		                  databasePassword="${export.torque.database.password}"
+		                  tableName="${export.torque.table.name}"
+		                  outputDirectory="${torque.output.absolute.dir}"
+		/>
+	</target>
+
 	<target name="package-export">
 		<delete file="${target.zip}"
 		        failonerror="false"
@@ -394,7 +415,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		         inheritall="true"
 		         param="xmlDataFile"
 		         parallel="true"
-		         maxthreads="5"
+		         maxthreads="1"
 		>
 			<path>
 				<fileset dir="${torque.schema.dir}" excludes="${import.exclude.data.pattern}">
