--- a/build.properties
+++ b/build.properties
@@ -12,3 +12,4 @@ appserver.url=https://test.kuali.org/
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
+command.svn=/usr/local/bin/svn
