--- a/build.properties
+++ b/build.properties
@@ -13,3 +13,4 @@ application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
 command.svn=/usr/local/bin/svn
+project.svn.url=https://test.kuali.org/svn
