--- a/impex/build.xml
+++ b/impex/build.xml
@@ -770,7 +770,6 @@ Please place the jar file for this class in the lib directory and try again.
 				<exclude name="database.dtd" />
 				<exclude name="*.txt" />
 				<exclude name="*.log" />
-				<exclude name=".cvsignore" />
 				<exclude name=".#*" />
 			</zipfileset>
 			<zipfileset dir="lib" prefix="impex/lib" includes="*.jar" excludes="${drivers.file.pattern}" />
@@ -797,5 +796,9 @@ Please place the jar file for this class in the lib directory and try again.
 		<echo>Running CVS checkout to ${torque.schema.dir}</echo>
 		<cvs command="checkout -d ${torque.schema.dir}"  cvsRoot="${cvsroot}" compressionlevel="6" package="${database.cvs.module}"
 		    failonerror="true" tag="${database.cvs.tag}" />
+	</target>
+	
+	<target name="subversion-checkout">
+		
 	</target>
 </project>
