--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 	
 	<target name="dist-external-svn" depends="init-database-properties">
 		<exec executable="${command.svn}" failonerror="true" logerror="true">
-			<arg line="-q checkout ${project.svn.url}/${project.cvs.package}/tags/${project.cvs.tag} ${checkout.directory}/${project.cvs.package}"/>
+			<arg line="-q checkout ${svn.base.url}/${project.cvs.package}/tags/${project.cvs.tag} ${checkout.directory}/${project.cvs.package}"/>
 		</exec>
 		<ant dir="${checkout.directory}/${project.cvs.package}" target="dist-external" />
 		<delete dir="${checkout.directory}/${project.cvs.package}" />
@@ -58,7 +58,7 @@
 	<target name="check-modularization-svn" depends="init-database-properties">
 		<delete dir="${checkout.directory}/${project.cvs.package}" failonerror="false" />
 		<exec executable="${command.svn}" failonerror="true" logerror="true">
-			<arg line="-q checkout ${project.svn.url}/${project.cvs.package}/tags/${project.cvs.tag} ${checkout.directory}/${project.cvs.package}"/>
+			<arg line="-q checkout ${svn.base.url}/${project.cvs.package}/tags/${project.cvs.tag} ${checkout.directory}/${project.cvs.package}"/>
 		</exec>
 		<trycatch property="has.error">
 			<try><ant dir="${checkout.directory}/${project.cvs.package}" target="check-modularization" /></try>
@@ -96,7 +96,7 @@
 	
 	<target name="update-database-svn" depends="create-mysql-user">
 		<exec executable="${command.svn}" failonerror="true" logerror="true">
-			<arg line="-q checkout ${project.svn.url}/${application.database.srcctrl.module}/tags/${project.cvs.tag} ${application.database.srcctrl.module}"/>
+			<arg line="-q checkout ${svn.base.url}/${application.database.srcctrl.module}/tags/${project.cvs.tag} ${application.database.srcctrl.module}"/>
 		</exec>
 		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
 		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
