Changed satellite update script to pull from SVN instead of CVS.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7095 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,9 @@
 	<classpathentry kind="lib" path="impex/lib/werken-xpath-0.9.4.jar"/>
 	<classpathentry kind="lib" path="impex/lib/xercesImpl-2.6.2.jar"/>
 	<classpathentry kind="lib" path="impex/lib/xml-apis-2.0.2.jar"/>
+	<classpathentry kind="lib" path="impex/lib/svnant.jar"/>
+	<classpathentry kind="lib" path="impex/lib/svnClientAdapter.jar"/>
+	<classpathentry kind="lib" path="impex/lib/svnjavahl.jar"/>
+	<classpathentry kind="lib" path="impex/lib/svnkit.jar"/>
 	<classpathentry kind="output" path="impex/build"/>
 </classpath>
