Forgot to use parameter for svnroot.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7096 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -799,7 +799,7 @@ Please place the jar file for this class in the lib directory and try again.
 		<delete dir="${torque.schema.dir}" />
 		<echo>Running SVN checkout to ${torque.schema.dir}</echo>		
 		<svn>
-			<checkout url="https://test.kuali.org/svn/${svn.module}/${svn.base}" destPath="${torque.schema.dir}" />
+			<checkout url="${svnroot}/${svn.module}/${svn.base}" destPath="${torque.schema.dir}" />
 		</svn>
 	</target>
 	
