--- a/impex/build.xml
+++ b/impex/build.xml
@@ -785,7 +785,10 @@ Please place the jar file for this class in the lib directory and try again.
 	<!-- assumes that this module has been checked out as ${torque.schema.dir} from SVN
 	     is performs an update on the current export user directory and then runs the import process
 	     -->
+	
 	<target name="satellite-update">
+		<available file="${torque.schema.dir}" property="data.dir.exists" />
+		<antcall target="satellite-init" />
 		<echo>Running SVN update in ${torque.schema.dir}</echo>
 		<svn>
 			<update dir="${torque.schema.dir}" />
@@ -795,7 +798,7 @@ Please place the jar file for this class in the lib directory and try again.
 		<antcall target="import" />
 	</target>
 	
-	<target name="satellite-init">
+	<target name="satellite-init" unless="data.dir.exists">
 		<delete dir="${torque.schema.dir}" />
 		<echo>Running SVN checkout to ${torque.schema.dir}</echo>		
 		<svn>
