--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -13,6 +13,7 @@
 #   and columns to be the same as SQL name.
 # -------------------------------------------------------------------
 
+#test
 torque.project = kfs
 #
 # the module and tag to check out from SVN for satellite updates
