--- a/kfs/build-oracle.properties
+++ b/kfs/build-oracle.properties
@@ -1,4 +1,5 @@
 project.cvs.package=kfs
+project.module=kfs
 project.server=kuali2
 shared.external.build.properties=/home/j2eemgr/kuali/kfs/build.properties
 
